--- a/src/style.scss
+++ b/src/style.scss
@@ -7,6 +7,10 @@ $primary: #009999;
 html {
   height: 100%;
   font-size: 14px;
+  //font-family: Avenir, Helvetica, Arial, sans-serif;
+  font-family: 'Roboto', sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
   --primary-color: #{$primary};
   --primary-color-fade: #{transparentize($primary, 0.4)};
   --primary-color-fade-strong: #{transparentize($primary, 0.8)};
@@ -43,11 +47,43 @@ body {
   flex-direction: column;
   align-items: stretch;
   margin-bottom: 1rem;
+
+  label {
+    margin-bottom: .25rem;
+  }
+
+  .error-text {
+    display: none;
+    margin-top: .25rem;
+    color: var(--error-color);
+  }
+
+  input.had-interaction:invalid {
+    border-color: var(--error-color);
+
+    + .error-text {
+      display: initial;
+    }
+
+    &:focus {
+      box-shadow: 0 0 3px 0 var(--error-color);
+    }
+  }
 }
 
 .form-error {
   margin-top: .75rem;
   color: var(--error-color);
+}
+
+a {
+  color: var(--primary-color);
+  font-weight: 500;
+  text-decoration: none;
+
+  &:focus {
+    text-decoration: underline;
+  }
 }
 
 input {
