--- a/src/style.scss
+++ b/src/style.scss
@@ -26,6 +26,10 @@ body {
   width: 100%;
 }
 
+.h-100 {
+  height: 100%;
+}
+
 .d-flex {
   display: flex;
 }
@@ -36,6 +40,10 @@ body {
 
 .flex-column {
   flex-direction: column;
+}
+
+.justify-content-center {
+  justify-content: center;
 }
 
 .align-items-center {
