--- a/src/style.scss
+++ b/src/style.scss
@@ -118,6 +118,7 @@ button {
   border-radius: 4px;
   box-shadow: none;
   cursor: pointer;
+  user-select: none;
   transition: background-color .2s, box-shadow .2s;
 
   &:focus {
