--- a/src/style.scss
+++ b/src/style.scss
@@ -16,12 +16,15 @@ html {
   --primary-color-fade-strong: #{transparentize($primary, 0.8)};
   --error-color: #b00020;
   --grey: #d0d0d0;
+  --grey-darker: #bfbfbf;
   --grey-dark: #999999;
+  --grey-bg: #fafafa;
 }
 
 body {
   margin: 0;
   min-height: 100%;
+  background-color: var(--grey-bg);
 }
 
 .w-100 {
