chat nicknames final touches

--- a/src/style.scss
+++ b/src/style.scss
@@ -42,6 +42,7 @@ html {
   --grey-darker: #bfbfbf;
   --grey-dark: #999999;
   --grey-bg: #fafafa;
+  --grey-text-light: #737373;
   --grey-text: #565656;
 }
 
