--- a/src/style.scss
+++ b/src/style.scss
@@ -93,6 +93,12 @@ body {
   align-items: center;
 }
 
+.text-overflow {
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+}
+
 .form-row {
   display: flex;
   flex-direction: column;
